# t5-translate

./: .dockerignore  .gitignore  Dockerfile  README.rst  build_run_image.sh  download_model_data.sh  pyproject.toml  run_app.sh  run_linters.sh
api/: __init__.py
api/v1/: __init__.py  translate.py
core/: config.py
schemas/: translate.py
